--- a/test/home_page.html
+++ b/test/home_page.html
@@ -14,13 +14,13 @@
 
         <header>
             <div class="top_bar">
-                <a href="home_page.html"><img src="../images/logo.png" alt="logo" id="logo"/></a><a href="about.html">About</a>
+                <a href="home_page.html"><img src="../images/pngs/logo.png" alt="logo" id="logo"/></a> | <a href="home_page.html">Home </a> | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</a>
             </div>
         </header>
 
         <section class="home">
 
-            <img src="../images/robbie_lens.png" alt="picture of robbie lens" class="robbie_picture"/>
+            <img src="../images/portfolio/robbie_lens.png" alt="picture of robbie lens" class="robbie_picture"/>
 
             <section class="description">
                     <h1>Photography</h1>
@@ -41,10 +41,11 @@
                         </ul>
                     </section>
                 </p>
+
             </section>
 
-            <div>
-                <a href="" class="portfolio">CHECK OUT MY PORTFOLIO</a>
+            <div  class="portfolio">
+                <a href="portfolio.html">CHECK OUT MY PORTFOLIO</a>
             </div>
 
             <nav class="navigation">
@@ -60,14 +61,12 @@
         </section>
 
         <footer>
-
             <div class="bott_bar">
-                <a href="home_page.html"> <img src="../images/logo.png" alt="logo" id="logo"/> </a>
-                <a href="https://www.instagram.com/" target="_blank"> <img src="../images/igb.png" class="png"/></a>
-                <a href="https://twitter.com/" target="_blank"> <img src="https://lh3.googleusercontent.com/proxy/O27nkevdnR3yIvEJ1RD5M_26eiaoW6JuCH3iI1xAKRoExPVdleQyQ1elYXai1QqbMDd5bS4op8l4jdiTxd7ypMiQVb_Ug5qWpGEGrJsg61WtdA1IZuin79WMgjwmf6a9TFSP" class="png"/></a>
-                <a href="https://www.facebook.com/" target="_blank"> <img src="../images/fbb.png" class="png"/></a>
+                <a href="home_page.html"> <img src="../images/pngs/logo.png" alt="logo" id="logo"/> </a>
+                <a href="https://www.instagram.com/" target="_blank"> <img src="../images/pngs/igb.png" class="png"/></a>
+                <a href="https://twitter.com/" target="_blank"> <img src="../images/pngs/twitterb.png" class="png"/></a>
+                <a href="https://www.facebook.com/" target="_blank"> <img src="../images/pngs/fbb.png" class="png"/></a>
             </div>
-            
         </footer>
  
     </body>
