--- a/test/home_page.html
+++ b/test/home_page.html
@@ -13,7 +13,7 @@
         <!-- we re gonna figure out what to put in the homepage body of the website -->
 
         <header>
-            <div class="top_bar">
+            <div class="top_bar sticky">
                 <a href="home_page.html"><img src="../images/pngs/logo.png" alt="logo" id="logo"/></a> | <a href="home_page.html">Home </a> | <a href="about.html">About</a> | <a href="portfolio.html">Portfolio</a>
             </div>
         </header>
@@ -45,7 +45,7 @@
             </section>
 
             <div  class="portfolio">
-                <a href="portfolio.html">CHECK OUT MY PORTFOLIO</a>
+                <a href="portfolio.html" class="port">CHECK OUT MY PORTFOLIO</a>
             </div>
 
             <nav class="navigation">
