--- a/test/portfolio.html
+++ b/test/portfolio.html
@@ -21,59 +21,146 @@
         <section class="pf">
             <h2 class="pf_title">Corporate photography</h2>
                 <div class="pictures">
-                    <img src="../images/portfolio/corpo1.jpg" class="pic pic1">
-                    <img src="../images/portfolio/corpo2.jpg" class="pic pic2">
-                    <img src="../images/portfolio/corpo3.jpg" class="pic pic3">
-                    <img src="../images/portfolio/corpo4.jpg" class="pic pic4">
-                    <img src="../images/portfolio/corpo5.jpg" class="pic pic5">
-                    <img src="../images/portfolio/corpo6.jpg" class="pic pic6">
+                    <a href="../images/portfolio/corpo1.jpg" class="pic pic1">
+                        <img src="../images/portfolio/corpo1.jpg" class="pic pic1">
+                        <span class="hover_text"> See Photo </span>
+                    </a>
+                    <a href="../images/portfolio/corpo2.jpg" class="pic pic2">
+                        <img src="../images/portfolio/corpo2.jpg" class="pic pic2">
+                        <span class="hover_text"> See Photo </span>
+                    </a>
+                    <a href="../images/portfolio/corpo3.jpg" class="pic pic3">
+                        <img src="../images/portfolio/corpo3.jpg" class="pic pic3">
+                        <span class="hover_text"> See Photo </span>
+                    </a>
+                    <a href="../images/portfolio/corpo4.jpg" class="pic pic4">
+                        <img src="../images/portfolio/corpo4.jpg" class="pic pic4" >
+                        <span class="hover_text"> See Photo </span>
+                    </a>
+                    <a href="../images/portfolio/corpo5.jpg" class="pic pic5">
+                        <img src="../images/portfolio/corpo5.jpg" class="pic pic5">
+                        <span class="hover_text"> See Photo </span>
+                    </a>
+                    <a href="../images/portfolio/corpo6.jpg" class="pic pic6">
+                        <img src="../images/portfolio/corpo6.jpg"class="pic pic6">
+                        <span class="hover_text"> See Photo </span>
+                    </a>
                 </div>
 
 
 
             <h2 class="pf_title">Commercial Photography</h2>
             <div class="pictures">
-                <img src="../images/portfolio/com1.jpg" class="pic pic1">
-                <img src="../images/portfolio/com2.jpg" class="pic pic2">
-                <img src="../images/portfolio/com3.jpg" class="pic pic3">
-                <img src="../images/portfolio/com4.jpg" class="pic pic4">
-                <img src="../images/portfolio/com5.jpg" class="pic pic5">
-                <img src="../images/portfolio/com6.jpg" class="pic pic6">
+                <a href="../images/portfolio/com1.jpg" class="pic pic1">
+                    <img src="../images/portfolio/com1.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/com2.jpg" class="pic pic2">
+                    <img src="../images/portfolio/com2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/com3.jpg" class="pic pic3">
+                    <img src="../images/portfolio/com3.jpg" class="pic pic3">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/com4.jpg" class="pic pic4">
+                    <img src="../images/portfolio/com4.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/com5.jpg" class="pic pic5">
+                    <img src="../images/portfolio/com5.jpg" class="pic pic5">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/com6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/com6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
             </div>
 
             <h2 class="pf_title">Portrait Photography</h2>
-
             <div class="pictures">
-                <img src="../images/portfolio/port2.jpg" class="pic pic1">
-                <img src="../images/portfolio/port4.jpg" class="pic pic2">
-                <img src="../images/portfolio/port5.jpg" class="pic pic3">
-                <img src="../images/portfolio/port6.jpg" class="pic pic4">
-                <img src="../images/portfolio/port7.jpg" class="pic pic5">
-                <img src="../images/portfolio/port8.jpg" class="pic pic6">
-
+                <a href="../images/portfolio/port1.jpg" class="pic pic1">
+                    <img src="../images/portfolio/port1.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port2.jpg" class="pic pic2">
+                    <img src="../images/portfolio/port2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port3.jpg" class="pic pic3">
+                    <img src="../images/portfolio/port3.jpg" class="pic pic3">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port4.jpg" class="pic pic4">
+                    <img src="../images/portfolio/port4.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port5.jpg" class="pic pic5">
+                    <img src="../images/portfolio/port5.jpg" class="pic pic5">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/port6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
             </div>
 
             <h2 class="pf_title">Event Photography</h2>
             <div class="pictures">
-                <img src="../images/portfolio/even1.jpg" class="pic pic1">
-                <img src="../images/portfolio/even2.jpg" class="pic pic2">
-                <img src="../images/portfolio/even3.jpg" class="pic pic3">
-                <img src="../images/portfolio/even4.jpg" class="pic pic4">
-                <img src="../images/portfolio/even5.jpg" class="pic pic5">
-                <img src="../images/portfolio/even6.jpg" class="pic pic6">
+                <a href="../images/portfolio/even1.jpg" class="pic pic1">
+                    <img src="../images/portfolio/even1.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even2.jpg" class="pic pic2">
+                    <img src="../images/portfolio/even2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even3.jpg" class="pic pic3">
+                    <img src="../images/portfolio/even3.jpg" class="pic pic3">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even4.jpg" class="pic pic4">
+                    <img src="../images/portfolio/even4.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even5.jpg" class="pic pic5">
+                    <img src="../images/portfolio/even5.jpg" class="pic pic5">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/even6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
             </div>
 
 
             <h2 class="pf_title">Photo Editing:</h2>
-            
-                <div class="pictures">
+            <div class="pictures">
+                <a href="../images/portfolio/pps1.jpg" class="pic pic1">
                     <img src="../images/portfolio/pps1.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps2.jpg" class="pic pic2">
                     <img src="../images/portfolio/pps2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps3.jpg" class="pic pic3">
                     <img src="../images/portfolio/pps3.jpg" class="pic pic3">
-                    <img src="../images/portfolio/pps4.jpg" class="pic pic4">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps4.jpg" class="pic pic4">
+                    <img src="../images/portfolio/pps4.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps5.jpg" class="pic pic5">
                     <img src="../images/portfolio/pps5.jpg" class="pic pic5">
-                    <img src="../images/portfolio/pps6.jpg" class="pic pic6">
-                </div>
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/pps6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+            </div>
 
 
         </section>
