--- a/test/about.html
+++ b/test/about.html
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <h2> Services </h2>
+            <h2 id="services"> Services and Fees</h2>
             <ol>
                 <li> <h3>Corporate Photography</h3> </li>
                     <section class="block">
@@ -94,6 +94,16 @@
                         </ul>
                     </section>
 
+                    <li><h3>Landscape Photography</h3></li>
+                    <section class="block">
+                        <ul>
+                            <li><strong>Nature and Scenic:</strong></li>
+                            <p class="details">Captivating photos of natural landscapes and scenic views..</p>
+                            <li><strong>Travel and Adventure:</strong> </li>
+                            <p class="details">Stunning visuals from travel destinations and adventure activities.</p>
+                        </ul>
+                    </section>
+
                 <li><h3>Post-Production Services</h3></li>
                     <section class="block">
                         <ul>
@@ -109,7 +119,115 @@
         </section>
 
         <section>
-            <h2> Socials </h2>
+            <h2 id="fees"></h2>
+            <table>
+                <caption>Fees Table</caption>
+                <tr>
+                    <th>Service Category</th>
+                    <th>Service</th>
+                    <th>Fee</th>
+                </tr>
+                <tr>
+                    <td rowspan="4">Corporate Photography</td>
+                    <td>Event Coverage</td>
+                    <td>$200/hour</td>
+                </tr>
+                <tr>
+                    <td>Headshots</td>
+                    <td>$150/person</td>
+                </tr>
+                <tr>
+                    <td>Office Environment</td>
+                    <td>$300/session</td>
+                </tr>
+                <tr>
+                    <td>Product Launches</td>
+                    <td>$250/hour</td>
+                </tr>
+
+
+                <tr>
+                    <td rowspan="4">Commercial Photography</td>
+                    <td>Product Photography</td>
+                    <td>$100/product</td>
+                </tr>
+                <tr>
+                    <td>Advertising Campaigns</td>
+                    <td>$500/compaign</td>
+                </tr>
+                <tr>
+                    <td>Brand Storytelling</td>
+                    <td>$400/session</td>
+                </tr>
+                <tr>
+                    <td>Fashuion Shoots</td>
+                    <td>$350/hour</td>
+                </tr>
+                
+
+                <tr>
+                    <td rowspan="4">Portrait Photography</td>
+                    <td>Individual Portraits</td>
+                    <td>$200/session</td>
+                </tr>
+                <tr>
+                    <td>Family Portraits</td>
+                    <td>$250/session</td>
+                </tr>
+                <tr>
+                    <td>Senior Portraits</td>
+                    <td>$180/session</td>
+                </tr>
+                <tr>
+                    <td>Maternity and Newborn</td>
+                    <td>$220/session</td>
+                </tr>
+
+
+                <tr>
+                    <td rowspan="3">Event Photography</td>
+                    <td>Weddings</td>
+                    <td>$1500/package (full day)</td>
+                </tr>
+                <tr>
+                    <td>Parties and Celebrations</td>
+                    <td>$200/hour</td>
+                </tr>
+                <tr>
+                    <td>Cultural and Community Events</td>
+                    <td>$180/hour</td>
+                </tr>
+
+
+                <tr>
+                    <td rowspan="2">Landscape Photography</td>
+                    <td>Nature and Scenic</td>
+                    <td>$300/session</td>
+                </tr>
+                <tr>
+                    <td>Travel and Adventure</td>
+                    <td>$350/session</td>
+                </tr>
+
+
+                <tr>
+                    <td rowspan="3">Post-Production Services</td>
+                    <td>Photo Editing</td>
+                    <td>$50/hour</td>
+                </tr>
+                <tr>
+                    <td>Retouching</td>
+                    <td>$70/hour</td>
+                </tr>
+                <tr>
+                    <td>Custom Printing</td>
+                    <td>$20/print</td>
+                </tr>
+            </table>
+        </section>
+
+        <section>
+            <h2 id="socials"> Socials </h2>
                 <ul>
                     <li>Twitter</li>
                     <p><a href="https://twitter.com/" target="_blank"> <img src="../images/pngs/twitterw.png" class="about_png"/></a></p>
@@ -121,7 +239,7 @@
         </section>
         
         <section>
-            <h2>Contact</h2>
+            <h2 id="contact">Contact</h2>
                 <ul>
                     <li><strong>Email:</strong></li>
                     <p> robbielens@photo.com</p>
