--- a/test/home_page.html
+++ b/test/home_page.html
@@ -19,8 +19,10 @@
         </header>
 
         <section class="home">
-
-            <img src="../images/portfolio/robbie_lens.png" alt="picture of robbie lens" class="robbie_picture"/>
+            <section class="rotation">
+                <img src="../images/portfolio/robbie_lens.png" alt="picture of robbie lens" class="rotation robbie_picture"/>
+                <span class="rotation dm"> A PROJECT? DM ME </span>
+            </section>
 
             <section class="description">
                     <h1>Photography</h1>
@@ -52,12 +54,52 @@
                 <ul>
                     <li><strong>Services</strong></li>
                     <p><a href="about.html#services" target="_blank" class="link"> services</a></p>
+                    <li><strong>Fees</strong></li>
+                    <p><a href="about.html#fees" target="_blank" class="link"> fees</a></p>
                     <li><strong>Socials</strong></li>
                     <p><a href="about.html#socials" target="_blank" class="link"> socials</a></p>
                     <li><strong>Contact</strong></li>
                     <p><a href="about.html#contact" target="_blank" class="link"> contact</a></p>
                 </ul>
             </nav>
+        </section>
+
+        <section class="preview">
+            <h2 class="preview_title">Latest Work</h2>
+            <div class="preview_pictures">
+                <a href="../images/portfolio/land7.jpg" class="pic pic1">
+                    <img src="../images/portfolio/land7.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even2.jpg" class="pic pic2">
+                    <img src="../images/portfolio/even2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/pps3.jpg" class="pic pic3">
+                    <img src="../images/portfolio/pps3.jpg" class="pic pic3">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port8.jpg" class="pic pic4">
+                    <img src="../images/portfolio/port8.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land8.jpg" class="pic pic5">
+                    <img src="../images/portfolio/land8.jpg" class="pic pic5">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/corpo6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/corpo6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/port7.jpg" class="pic pic7">
+                    <img src="../images/portfolio/port7.jpg" class="pic pic7">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/even7.jpg" class="pic pic8">
+                    <img src="../images/portfolio/even7.jpg"class="pic pic8">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+            </div>
         </section>
 
         <footer>
