--- a/test/portfolio.html
+++ b/test/portfolio.html
@@ -133,6 +133,33 @@
                 </a>
             </div>
 
+            <h2 class="pf_title">Landscape Photography</h2>
+            <div class="pictures">
+                <a href="../images/portfolio/land1.jpg" class="pic pic1">
+                    <img src="../images/portfolio/land1.jpg" class="pic pic1">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land2.jpg" class="pic pic2">
+                    <img src="../images/portfolio/land2.jpg" class="pic pic2">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land3.jpg" class="pic pic3">
+                    <img src="../images/portfolio/land3.jpg" class="pic pic3">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land4.jpg" class="pic pic4">
+                    <img src="../images/portfolio/land4.jpg" class="pic pic4" >
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land5.jpg" class="pic pic5">
+                    <img src="../images/portfolio/land5.jpg" class="pic pic5">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+                <a href="../images/portfolio/land6.jpg" class="pic pic6">
+                    <img src="../images/portfolio/land6.jpg"class="pic pic6">
+                    <span class="hover_text"> See Photo </span>
+                </a>
+            </div>
 
             <h2 class="pf_title">Photo Editing:</h2>
             <div class="pictures">
