--- a/test/home_page.html
+++ b/test/home_page.html
@@ -102,6 +102,28 @@
             </div>
         </section>
 
+        <form method="get" action="">
+            <section class="field f_name">
+                <label for="first name"> First Name:</label><br>
+                <input type="text" name="first name" id="first name" placeholder="Ex: Robbie"> 
+            </section>
+
+            <section class="field l_name">
+                <label for="last name"> Last Name:</label><br>
+                <input type="text" name="last name" id="last name" placeholder="Ex: LENS"> 
+    
+            </section>
+            <section class="field mail_address">
+                <label for="mail">Mail address:</label><br>
+                <input type="text" name="mail" id="mail" placeholder="robbie.lens@example.com" size="83" maxlength="30"></input>
+            </section>
+            <section class="field message">
+                <label for="message">Message:</label><br>
+                <textarea name="message" id="message"  cols="83" rows="6">Your message here...</textarea>
+            </section>
+
+        </form>
+
         <footer>
             <div class="bott_bar">
                 <a href="home_page.html"> <img src="../images/pngs/logo.png" alt="logo" id="logo"/> </a>
