--- a/test/about.html
+++ b/test/about.html
@@ -254,7 +254,7 @@
 
     <footer>
         <div >
-            <a href="" class="port">A PROJECT? DM ME</a>
+            <a href="home_page.html#dm_anchor" class="port">A PROJECT? DM ME</a>
         </div>
         <div class="bott_bar">
             <a href="home_page.html"> <img src="../images/pngs/logo.png" alt="logo" id="logo"/> </a>
