--- a/test/home_page.html
+++ b/test/home_page.html
@@ -107,23 +107,36 @@
         <h2 class="form_title" id="dm_anchor">Let's talk about your project</h2>
 
         <form method="get" action="">
-            <section class="field f_name">
-                <label for="first-name">First Name:</label>
-                <input type="text" name="first name" id="first-name" placeholder="Ex: Robbie"> 
-            </section>
-        
-            <section class="field l_name">
-                <label for="last-name">Last Name:</label>
-                <input type="text" name="last name" id="last-name" placeholder="Ex: LENS"> 
-            </section>
-            <section class="field mail_address">
-                <label for="mail">Mail address:</label>
-                <input type="text" name="mail" id="mail" placeholder="robbie.lens@example.com">
-            </section>
-            <section class="field message">
-                <label for="message">Message:</label>
-                <textarea name="message" id="message">Your message here...</textarea>
-            </section>
+            <fieldset>
+                <legend>Contact Details</legend>
+                <div class="contact-details">
+                    <div class="field">
+                        <label for="first-name">First Name:</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="Ex: Robbie" autofocus required>
+                    </div>
+                    <div class="field">
+                        <label for="last-name">Last Name:</label>
+                        <input type="text" id="last-name" name="last-name" placeholder="Ex: LENS" autocapitalize="" required>
+                    </div>
+                    <div class="field">
+                        <label for="email">Mail Address:</label>
+                        <input type="text" id="email" name="email" placeholder="Ex: robbie.lens@example.com"required>
+                    </div>
+                    <div class="field">
+                        <label for="phone-number">Phone Number:</label>
+                        <input type="text" id="phone-number" name="phone-number" placeholder="Ex:+123 4 56 78 90 00">
+                    </div>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Tell Me About Your Project</legend>
+                <div class="field">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Your message here..." required></textarea>
+                </div>
+            </fieldset>
+
+            <input type="submit" value="Submit" class="submit_button">
         </form>
 
         <footer>
